creando nueva clase CHECKBOX y CSS

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -56,15 +56,15 @@
                 <label for="confirmar">Confirmar contraseña: </label>
                 <input type="text" name="confirmar" id="confirmar">
             </div>
-
-            <label for="notificar">Recibir notificaciones</label>
-            <input type="checkbox" name="notificar" id="notificar">
-
-
-            <label for="terminos">Acepto los términos y condiciones</label>
-            <input type="checkbox" name="terminos" id="terminos">
+            <div class="checkbox">
+                <label for="notificar">Recibir notificaciones</label>
+                <input type="checkbox" name="notificar" id="notificar">
 
 
+                <label for="terminos">Acepto los términos y condiciones</label>
+                <input type="checkbox" name="terminos" id="terminos">
+
+            </div>
             <input type="submit" id="crear" value="Crear cuenta">
 
 
