definiendo nueva clase CHECKBOX para poner CSS

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -56,13 +56,13 @@
                 <label for="confirmar">Confirmar contraseña: </label>
                 <input type="text" name="confirmar" id="confirmar">
             </div>
-            <div class="checkbox">
+            <div class="marcar">
                 <label for="notificar">Recibir notificaciones</label>
-                <input type="checkbox" name="notificar" id="notificar">
+                <input type="checkbox" name="notificar" id="notificar" class="checkbox">
 
 
                 <label for="terminos">Acepto los términos y condiciones</label>
-                <input type="checkbox" name="terminos" id="terminos">
+                <input type="checkbox" name="terminos" id="terminos" class="checkbox">
 
             </div>
             <input type="submit" id="crear" value="Crear cuenta">
