Copiando formato de la pagina principal

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -14,7 +14,7 @@
             <img src="../imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
         </div>
         <div class="titulo">
-            <h1>Flores Encantadas</h1>
+            <h2>Flores Encantadas</h2>
         </div>
         <nav>
             <ul>
@@ -28,7 +28,13 @@
 
     </header>
 
-
+    <section id="titulo-flores">
+        <div class="contenedor-titulo">
+            <h1>Flores Encantadas</h1>
+            <p>•——————•°•✿•°•——————•</p>
+            <p>"Flores frescas, emociones frescas"</p>
+        </div>
+    </section>
 
     <section id="registro" class="registro">
 
