Nueva clase para LOGO y TITULO para posicionarlos

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -10,11 +10,13 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="../imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
-        </div>
-        <div class="titulo">
-            <h2>Flores Encantadas</h2>
+        <div class="contenedor-logotitulo">
+            <div class="logo">
+                <img src="../imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
+            </div>
+            <div class="titulo">
+                <h2>Flores Encantadas</h2>
+            </div>
         </div>
         <nav>
             <ul>
