definiendo nueva clase enviar-cancelar

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -73,7 +73,9 @@
                 <input type="checkbox" name="terminos" id="terminos" class="checkbox">
 
             </div>
-            <input type="submit" id="crear" value="Crear cuenta">
+            <input class="enviar-cancelar" type="submit" id="crear" value="Crear cuenta">
+
+            <input class="enviar-cancelar" type="reset" id="borrar" value="Cancelar registro">
 
 
         </form>
