Acomodando botones del formulario

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -73,11 +73,12 @@
                 <input type="checkbox" name="terminos" id="terminos" class="checkbox">
 
             </div>
-            <input class="enviar-cancelar" type="submit" id="crear" value="Crear cuenta">
+            <div class="contenedor-botones">
+                <input class="enviar-cancelar" type="submit" id="crear" value="Crear cuenta">
 
-            <input class="enviar-cancelar" type="reset" id="borrar" value="Cancelar registro">
+                <input class="enviar-cancelar" type="reset" id="borrar" value="Cancelar registro">
 
-
+            </div>
         </form>
     </section>
 
