Alineando titulo REGISTRARSE

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registrarme</title>
+    <title>Registrarse</title>
     <link rel="stylesheet" href="registro_estilo.css">
 </head>
 
@@ -34,14 +34,14 @@
         <div class="contenedor-titulo">
             <h1>Flores Encantadas</h1>
             <p>•——————•°•✿•°•——————•</p>
-            <p>"Flores frescas, emociones frescas"</p>
+            <p>"El encanto de las flores frescas"</p>
         </div>
     </section>
 
     <section id="registro" class="registro">
 
         <form>
-            <h2>Registrarme</h2>
+            <h2>Registrarse</h2>
             <div class="datos">
                 <label for="nom">Nombre: </label>
                 <input type="text" name="nom" id="nom">
