Rediseñando seccion registrarse en la pag principal

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="Inicio">Inicio</a></li>
-                    <li><a href="Registro">Resgistrarse</a></li>
+                    <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/registro%20html/formularioRegistro.html?nom=&ape=&email=&usuario=&contra=&confirmar=">Resgistrarse</a></li>
                     <li><a href="Pedido">Pedido</a></li>
                     <li><a href="Nosotros"> nosotros</a></li>
                 </ul>
@@ -58,46 +58,30 @@
                 <span>Jazmin</span>
             </div>
             <div id="img1_e1">
-                <img class="imgTipo1" id="borde1" src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul"
-                    width="100" height="120" />
-                <img class="imgTipo1" src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100"
-                    height="120" />
-                <img class="imgTipo1" src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100"
-                    height="120" />
-                <img class="imgTipo1" src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo"
-                    title="Tulipan amarillo" width="100" height="120" />
-                <img class="imgTipo1" src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja"
-                    width="100" height="120" />
+                <img class="imgTipo1" id="borde1" src="imagenes/rosaAzul1.png" alt="rosa_Azul" title="Rosa azul" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/rosaRoja1.png" alt="rosa_Roja" title="Rosa roja" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/rosaRosa1.png" alt="rosa_Rosa" title="Rosa rosada" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/tulipanAmarillo1.jpg" alt="tulipan_Amarillo" title="Tulipan amarillo" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/tulipanNaranja1.jpg" alt="tulipan_Naranja" title="Tulipan naranja" width="100" height="120" />
             </div>
             <div id="img1_e2">
-                <img class="imgTipo1" src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca"
-                    width="100" height="120" />
-                <img class="imgTipo1" src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul"
-                    width="100" height="120" />
-                <img class="imgTipo1" src="imagenes/orquideaManchas1.jpg" alt="orquidea_Manchas"
-                    title="Orquidea Manchada" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/orquideaBlanca1.png" alt="orquidea_Blanca" title="Orquidea blanca" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/orquideaAzul1.png" alt="orquidea_Azul" title="Orquidea azul" width="100" height="120" />
+                <img class="imgTipo1" src="imagenes/orquideaManchas1.jpg" alt="orquidea_Manchas" title="Orquidea Manchada" width="100" height="120" />
                 <img class="imgTipo1" src="imagenes/Gualda1.png" alt="gualda" title="Gualda" width="100" height="120" />
                 <img class="imgTipo1" src="imagenes/jazmin1.jpg" alt="jazmin" title="Jazmin" width="100" height="120" />
             </div>
             <div id="img2">
-                <img class="imgTipo2" id="muestra1" src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul"
-                    width="300" height="360" />
-                <img class="imgTipo2" id="muestra2" src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja"
-                    width="300" height="360" />
-                <img class="imgTipo2" id="muestra3" src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada"
-                    width="300" height="360" />
-                     <img class="imgTipo2"  id="muestra4" src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo"
-                        width="300" height="360" />
-                    <img class="imgTipo2"  id="muestra5" src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300"
-                        height="360" />
-                    <img class="imgTipo2" id="muestra6"  src="imagenes/orquideaBlanca2.png" alt="orquidea_Blanca2" title="Orquidea blanca" width="300"
-                        height="360" />
-                    <img class="imgTipo2"  id="muestra7" src="imagenes/orquideaAzul2.png" alt="orquidea_Azul2" title="Orquidea azul" width="300"
-                        height="360" />
-                    <img class="imgTipo2"  id="muestra8" src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada"
-                        width="300" height="360" />
-                    <img class="imgTipo2"  id="muestra9" src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
-                    <img class="imgTipo2"  id="muestra10" src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300"  height="360" />
+                <img class="imgTipo2" id="muestra1" src="imagenes/rosaAzul2.png" alt="rosa_Azul2" title="Rosa azul" width="300" height="360" />
+                <img class="imgTipo2" id="muestra2" src="imagenes/rosaRoja2.png" alt="rosa_Roja2" title="Rosa roja" width="300" height="360" />
+                <img class="imgTipo2" id="muestra3" src="imagenes/rosaRosa2.png" alt="rosa_Rosa2" title="Rosa rosada" width="300" height="360" />
+                <img class="imgTipo2" id="muestra4" src="imagenes/tulipanAmarillo2.jpg" alt="tulipan_Amarillo2" title="Tulipan amarillo" width="300" height="360" />
+                <img class="imgTipo2" id="muestra5" src="imagenes/tulipanNaranja2.jpg" alt="tulipan_Naranja2" title="Tulipan naranja" width="300" height="360" />
+                <img class="imgTipo2" id="muestra6" src="imagenes/orquideaBlanca2.png" alt="orquidea_Blanca2" title="Orquidea blanca" width="300" height="360" />
+                <img class="imgTipo2" id="muestra7" src="imagenes/orquideaAzul2.png" alt="orquidea_Azul2" title="Orquidea azul" width="300" height="360" />
+                <img class="imgTipo2" id="muestra8" src="imagenes/orquideaManchas2.jpg" alt="orquidea_Manchas2" title="Orquidea Manchada" width="300" height="360" />
+                <img class="imgTipo2" id="muestra9" src="imagenes/Gualda2.png" alt="gualda2" title="Gualda" width="300" height="360" />
+                <img class="imgTipo2" id="muestra10" src="imagenes/jazmin2.jpg" alt="jazmin2" title="Jazmin" width="300" height="360" />
             </div>
         </div>
     </section>
@@ -120,23 +104,15 @@
     <section id="registrarse" class="registrarse">
         <h2>Registrarse</h2>
         <p>Registrate para acceder a todo nuestro catálago y pedir tu ramo de flores personalizado.</p>
-        <form action="#">
-            <label for="nombre">Nombre de usuario:</label>
-            <input type="text" id="nombre" name="nombre" />
-
-            <label for="contra">Contraseña:</label>
-            <input type="password" id="contra" name="contra" />
-
-            <input type="submit" name="registrarse" value="Registrarse" id="registrarse" />
-        </form>
+        <a id="a-button" href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/registro%20html/formularioRegistro.html?nom=&ape=&email=&usuario=&contra=&confirmar="><button class="button">Acceder</button></a>
     </section>
 
     <footer>
-        <div> 
+        <div>
             <p>2024 Flores Encantadas.</p>
             <p>"El encanto de las flores frescas"</p>
         </div>
-    </footer> 
+    </footer>
 
 </body>
 
