Agregando footer en HTML y CSS

--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -80,7 +80,14 @@
 
             </div>
         </form>
+
     </section>
+    <footer>
+        <div>
+            <p>2024 Flores Encantadas.</p>
+            <p>"El encanto de las flores frescas"</p>
+        </div>
+    </footer>
 
 </body>
 
