centrando opciones de letra

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -176,9 +176,9 @@
 
             <div id="persCarta">
                 <a class="opCarta">Tipo de letra:</a>
-                <label for="cursiva">Cursiva</label>
+                <label class="opLetra" for="cursiva">Cursiva</label>
                 <input class="radio" type="radio" name="tLetra" id="cursiva" value="cursiva">
-                <label for="imprenta">Imprenta</label>
+                <label class="opLetra" for="imprenta">Imprenta</label>
                 <input class="radio" type="radio" name="tLetra" id="imprenta" value="imprenta">
 
                 <label for="colorP">Color papel</label>
