centrando opciones de color

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -181,7 +181,9 @@
                 <label class="opLetra" for="imprenta">Imprenta</label>
                 <input class="radio" type="radio" name="tLetra" id="imprenta" value="imprenta">
 
-                <label for="colorP">Color papel</label>
+                <label class="opLetra" for="colorP">Color papel</label>
+                <label for="colorL" id="cletra">Color letra</label>
+
                 <select name="colorP" id="colorP">
                    <option value="blanco">Blanco</option>
                     <option value="negro">Negro</option>
@@ -204,7 +206,7 @@
                     <option value="plat">Plateado</option>
                     <option value="dor">Dorado</option>
                 </select>
-                <label for="colorL">Color letra</label>
+                
                 <select name="colorL" id="colorL">
                     <option value="negro">Negro</option>
                     <option value="blanco">Blanco</option>
