estilizando opciones finales

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -236,9 +236,12 @@
     </div>
     </section>
 
-    <section class="caja_cent" id="botonF">
-			<input type="submit" name="enviar" value="enviar" />
-			<input type="reset" name="borrar" value="borrar" />
+    <section class="caja_cent">
+        <div id="botonF">
+			<input type="submit" name="enviar" value="enviar" class="opcionF"/>
+
+			<input type="reset" name="borrar" value="borrar"  class="opcionF"/>
+        </div>
     </section>
     
 
