Borrando archivo JS

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
 
     </div>
     <section id="info-ramos" class="info-ramos">
-        <h2>Más informacion sobre nuestros ramos</h2>
+        <h2>Más información sobre nuestros ramos</h2>
         <p>Nos gusta ofrecer la mejor calidad en flores a nuestros clientes, por eso diseñamos esta página web que nos permite distribuir los mejores ramos florales a toda la patagonia y con todo su encanto.</p>
         <p>A través de esta web oficial de Flores Encantadas, podrás elegir de nuestro catálogo las flores que más te gusten. Personalizá el ramo de tus sueños. </p>
     </section>
