--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -44,11 +44,11 @@
             <h2>Registrarse</h2>
             <div class="datos">
                 <label for="nom">Nombre: </label>
-                <input type="text" name="nom" id="nom">
+                <input type="text" name="nom" id="nom" placeholder="Tu nombre">
 
 
                 <label for="ape">Apellido: </label>
-                <input type="text" name="ape" id="ape">
+                <input type="text" name="ape" id="ape" placeholder="Tu apellido">
 
 
                 <label for="email">Correo electrónico: </label>
@@ -62,7 +62,7 @@
                 <input type="password" name="contra" id="contra" placeholder="Ingrese nueva contraseña">
 
                 <label for="confirmar">Confirmar contraseña: </label>
-                <input type="text" name="confirmar" id="confirmar">
+                <input type="text" name="confirmar" id="confirmar" placeholder="Confirma tu nueva contraseña">
             </div>
             <div class="marcar">
                 <label for="notificar">Recibir notificaciones</label>
