Adaptando el formato de las paginas

--- a/index.html
+++ b/index.html
@@ -10,20 +10,26 @@
 
 <body>
     <header>
-        <div class="logo">
-            <img src="imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
+        <div class="contenedor-logotitulo">
+            <div class="logo">
+                <img src="../imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
+            </div>
+            <div class="titulo">
+                <h2>Flores Encantadas</h2>
+            </div>
         </div>
-        <header>
+        <nav>
+            <ul>
+                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/index.html">Inicio</a></li>
+                <li><a href="Registro">Resgistrarse</a></li>
+                <li><a href="Pedido">Pedido</a></li>
+                <li><a href="Catalogo">Catalogo</a></li>
+            </ul>
+        </nav>
 
-            <nav>
-                <ul>
-                    <li><a href="Inicio">Inicio</a></li>
-                    <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/registro%20html/formularioRegistro.html?nom=&ape=&email=&usuario=&contra=&confirmar=">Resgistrarse</a></li>
-                    <li><a href="Pedido">Pedido</a></li>
-                    <li><a href="Catalogo">Nosotros</a></li>
-                </ul>
-            </nav>
-        </header>
+
+    </header>
+
 
     <section id="Inicio" class="inicio">
         <div class="contenido-inicio">
