añadiendo enlaces al NAV

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <div class="contenedor-logotitulo">
             <div class="logo">
-                <img src="../imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
+                <img src="imagenes/logoflor.png.jpeg" alt="flore.jpeg" />
             </div>
             <div class="titulo">
                 <h2>Flores Encantadas</h2>
@@ -21,18 +21,17 @@
         <nav>
             <ul>
                 <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/index.html">Inicio</a></li>
-                <li><a href="Registro">Resgistrarse</a></li>
+                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/registro%20html/formularioRegistro.html">Resgistrarse</a></li>
                 <li><a href="Pedido">Pedido</a></li>
-                <li><a href="Catalogo">Catalogo</a></li>
+                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/categoria.html">Catalogo</a></li>
             </ul>
         </nav>
 
 
     </header>
 
-
-    <section id="Inicio" class="inicio">
-        <div class="contenido-inicio">
+    <section id="titulo-flores">
+        <div class="contenedor-titulo">
             <h1>Flores Encantadas</h1>
             <p>•——————•°•✿•°•——————•</p>
             <p>"El encanto de las flores frescas"</p>
@@ -40,7 +39,6 @@
             <p>Personalizá el ramo de tus sueños!</p> -->
         </div>
     </section>
-
 
     <section id="centrarCaja">
 
