--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -21,9 +21,9 @@
         <nav>
             <ul>
                 <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/index.html">Inicio</a></li>
-                <li><a href="Registro">Resgistrarse</a></li>
+                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/registro%20html/formularioRegistro.html">Resgistrarse</a></li>
                 <li><a href="Pedido">Pedido</a></li>
-                <li><a href="Nosotros">Nosotros</a></li>
+                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/categoria.html">Catálago</a></li>
             </ul>
         </nav>
 
