Cambiando colores y aplicando box shadow

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <div id="cajaImg">
             <div id="cat">
-                <p id="titleC"> Vea parte de nuestro catalogo:</p>
+                <p id="titleC"> Vea parte de nuestro catálogo:</p>
             </div>
             <div id="nombres1">
                 <span>Rosa azul</span>
