contieniendo los elementos dentro de un form

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -33,6 +33,7 @@
         </div></div>
     </section>
 
+    <form action="formularios.html" method="post" enctype="multipart/from_data">
     <section class="caja_cent" id="cent_flores">
         <div class="agranda" id="transicionFl">
         <div id="flores">
@@ -243,7 +244,7 @@
 			<input type="reset" name="borrar" value="borrar"  class="opcionF"/>
         </div>
     </section>
-    
+    </form>
 
 </body>
 </html>
