cambiando las primeras opciones de los select de flores

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -64,7 +64,6 @@
                 <div>
                 <label for="tipo1">Tipo:</label>
                 <select name="tipo1" id="tipo1">
-                    <option value="" disabled>Seleccione</option>
                     <option value="rosaAzul">Rosa azul</option>
                     <option value="rosaRoja">Rosa roja</option>
                     <option value="rosaRosa">Rosa rosada</option>
@@ -83,7 +82,7 @@
                 <div>
                 <label for="cant2">Cantidad:</label>
                 <select name="cant2" id="cant2">
-                    <option value=""disabled>-</option>
+                    <option value="">-</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -104,7 +103,7 @@
                 <div>
                 <label for="tipo2">Tipo:</label>
                 <select name="tipo2" id="tipo2">
-                    <option value="" disabled>Seleccione</option>
+                    <option value="">Seleccione</option>
                     <option value="rosaAzul">Rosa azul</option>
                     <option value="rosaRoja">Rosa roja</option>
                     <option value="rosaRosa">Rosa rosada</option>
@@ -124,7 +123,7 @@
                 <div>
                 <label for="cant3">Cantidad:</label>
                 <select name="cant3" id="cant3">
-                    <option value=""disabled>-</option>
+                    <option value="">-</option>
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
@@ -145,7 +144,7 @@
                 <div>
                 <label for="tipo3">Tipo:</label>
                 <select name="tipo3" id="tipo3">
-                    <option value="" disabled>Seleccione</option>
+                    <option value="" >Seleccione</option>
                     <option value="rosaAzul">Rosa azul</option>
                     <option value="rosaRoja">Rosa roja</option>
                     <option value="rosaRosa">Rosa rosada</option>
