--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -32,7 +32,7 @@
 
     <section id="titulo-flores">
         <div class="contenedor-titulo">
-            <h1>Flores Encantadas</h1>
+            <h1>Accede a todo el contenido:</h1>
             <p>•——————•°•✿•°•——————•</p>
             <p>"El encanto de las flores frescas"</p>
         </div>
