añadiendo nombre del emprendimiento en el header

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -7,13 +7,18 @@
     <link rel="stylesheet" href="css/style.css" />
 
 </head>
+
+
 <body>
     <header>
         <div class="logo">
             <img src="../imagenes/logoflor.png.jpeg" alt="Logo flor" />
         </div>
+        <a>Flores Encantadas</a>
         <header>
+            
             <nav>
+                
                 <ul>
                     <li><a href="Inicio">Inicio</a></li>
                     <li><a href="Registro">Resgistrarse</a></li>
