estilizando nombre del emprendimiento

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -14,7 +14,7 @@
         <div class="logo">
             <img src="../imagenes/logoflor.png.jpeg" alt="Logo flor" />
         </div>
-        <a>Flores Encantadas</a>
+        <a id="nomEmp">Flores Encantadas</a>
         <header>
             
             <nav>
