--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -20,8 +20,8 @@
             <nav>
                 
                 <ul>
-                    <li><a href="Inicio">Inicio</a></li>
-                    <li><a href="Registro">Resgistrarse</a></li>
+                    <li><a href="../index.html">Inicio</a></li>
+                    <li><a href="../registro html/formularioRegistro.html">Resgistrarse</a></li>
                 </ul>
             </nav>
         </header>
@@ -34,7 +34,7 @@
             <h1>Haga su pedido</h1>
             <p>Le ofrecemos persolanizacion y variedad a nuestros clientes</p>
             <p>Vea nuestras muestras de flores</p>
-            <a href="../catalogo/catalogo.html" id="linkCat">Catalogo</a>
+            <a href="../categoria.html" id="linkCat">Catalogo</a>
         </div></div>
     </section>
 
