enlazando la pagina principal con la pagina pedidos, catalogo y registro

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         </div>
         <nav>
             <ul>
-                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/index.html">Inicio</a></li>
-                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/registro%20html/formularioRegistro.html">Resgistrarse</a></li>
-                <li><a href="Pedido">Pedido</a></li>
-                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/categoria.html">Catalogo</a></li>
+                <li><a>Inicio</a></li>
+                <li><a href="registro html/formularioRegistro.html">Resgistrarse</a></li>
+                <li><a href="pedidos/pedidos.html">Pedido</a></li>
+                <li><a href="categoria.html">Catalogo</a></li>
             </ul>
         </nav>
 
