--- a/registro html/formularioRegistro.html
+++ b/registro html/formularioRegistro.html
@@ -20,10 +20,9 @@
         </div>
         <nav>
             <ul>
-                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/index.html">Inicio</a></li>
-                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/registro%20html/formularioRegistro.html">Resgistrarse</a></li>
-                <li><a href="Pedido">Pedido</a></li>
-                <li><a href="file:///C:/Users/Lenovo/Desktop/winderman/TP%202%20grupal/TP_2_GRUPAL/categoria.html">Catálago</a></li>
+                <li><a href="../index.html">Inicio</a></li>
+                <li><a href="../pedidos/pedidos.html">Pedido</a></li>
+                <li><a href="../categoria.html">Catálago</a></li>
             </ul>
         </nav>
 
