--- a/categoria.html
+++ b/categoria.html
@@ -16,10 +16,9 @@
 
         <nav>
             <ul>
-                <li><a href="Inicio">Inicio</a></li>
-                <li><a href="Registro">Resgistrarse</a></li>
-                <li><a href="Pedido">Pedido</a></li>
-                <li><a href="categoria.html">Categoria</a></li>
+                <li><a href="index.html">Inicio</a></li>
+                <li><a href="registro html/formularioRegistro.html">Resgistrarse</a></li>
+                <li><a href="pedidos/pedidos.html">Pedido</a></li>
             </ul>
         </nav>
     </header>
