cambiando animacion del enlace al catalogo en pedidos

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -10,7 +10,7 @@
 
 
 <body>
-    <header>
+    <header id="headerPrin">
         <div class="logo">
             <img src="../imagenes/logoflor.png.jpeg" alt="Logo flor" />
         </div>
@@ -18,7 +18,6 @@
         <header>
             
             <nav>
-                
                 <ul>
                     <li><a href="../index.html">Inicio</a></li>
                     <li><a href="../registro html/formularioRegistro.html">Resgistrarse</a></li>
