cambiando los titulos de las opciones para flores

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -44,7 +44,13 @@
             <h2>Puede elegir hasta 3 tipos de flores</h2>
             <div id="caja_flor">
             <div id="flor1" class="caja_op">
-                <a class="numF">Flor 1</a>
+                <div class="contTitFLor">
+                    <div>
+                        <a class="florcita">✿</a>
+                        <a class="numF"> Flor 1 </a>
+                        <a class="florcita">✿</a>
+                    </div>
+                </div>
                 <div>
                 <label for="cant1">Cantidad:</label>
                 <select name="cant1" id="cant1">
@@ -81,7 +87,13 @@
                 </select></div>
             </div>
             <div id="flor2" class="caja_op">
-                <a class="numF">Flor 2</a>
+                <div class="contTitFLor">
+                    <div>
+                        <a class="florcita">✿</a>
+                        <a class="numF"> Flor 2 </a>
+                        <a class="florcita">✿</a>
+                    </div>
+                </div>
 
                 <div>
                 <label for="cant2">Cantidad:</label>
@@ -123,8 +135,13 @@
                 </div>
            
             <div id="flor3" class="caja_op">
-                <a class="numF">Flor 3</a>
-                <div>
+                <div class="contTitFLor">
+                    <div>
+                        <a class="florcita">✿</a>
+                        <a class="numF"> Flor 3 </a>
+                        <a class="florcita">✿</a>
+                    </div>
+                </div>                <div>
                 <label for="cant3">Cantidad:</label>
                 <select name="cant3" id="cant3">
                     <option value="">-</option>
