corrigiendo faltas de acento en pedidos

--- a/pedidos/pedidos.html
+++ b/pedidos/pedidos.html
@@ -31,9 +31,9 @@
         <div class="agranda" id="transicionIn">
         <div id="inicio">
             <h1>Haga su pedido</h1>
-            <p>Le ofrecemos persolanizacion y variedad a nuestros clientes</p>
+            <p>Le ofrecemos personalización y variedad a nuestros clientes</p>
             <p>Vea nuestras muestras de flores</p>
-            <a href="../categoria.html" id="linkCat">Catalogo</a>
+            <a href="../categoria.html" id="linkCat">Catálogo</a>
         </div></div>
     </section>
 
@@ -191,7 +191,7 @@
 
             <div id="cajaCarta">
             <div>
-            <label class="opCarta" for="escribir">Escribir</label>
+            <label class="opCarta" for="escribir">Escribir:</label>
             <textarea name="escribir" id="escribir" maxlength="300"></textarea>
             </div>
 
